...
                                let service = Service(name: name, url: url)
                                self.serviceArray.append(service)
                            }
                        }
                        
                        nameLabel.text = "Username: \(user.username ?? "N/A")"
                        emailLabel.text = "Email: \(user.email ?? "N/A")"
                    }
                }
                
            }
        }
    }
...
